# python-config

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
flowtr_config/: __init__.py  config.py  validator.py
flowtr_config/source/: __init__.py  source.py
tests/: config.py  main.py  tests.env  tests.yaml  validation.py
