[tool.poetry]
name = "flowtr-config"
version = "0.0.1"
description = "Typed configuration and validation"
authors = ["Theo Paris <theoparisdesigns@gmail.com>"]
repository = "https://github.com/flowtr/python-config"
packages = [{ include = "flowtr_config" }]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
typed-models = ">=0.2.3"
colour-runner = ">=0.1.1"
firstclass-dotenv = ">=0.0.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
poethepoet = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "python3 -m tests.main"
